# Rust-8

./: Cargo.toml
chip8/: Cargo.toml
chip8-desktop/: Cargo.toml
chip8-desktop/src/: main.rs
chip8-embedded/: Cargo.toml
chip8-embedded/src/: keypad.rs  main.rs  output.rs  random.rs
chip8/src/: chip8.rs  instruction.rs  lib.rs  output.rs
src/: chip8.rs  display.rs  lib.rs  main.rs
