[package]
name = "chip8-embedded"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m-rt = "0.6.7"
cortex-m = "0.5.8"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"
bitflags = "1.2.0"

[dependencies.stm32f0xx-hal]
version = "0.15"
features = ["stm32f042", "rt"]
