[package]
name = "chip8-embedded"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m-rt = "0.6.7"
cortex-m = "0.5.8"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"
bitflags = "1.2.0"
random-trait= "0.1.1"
ili9341 = "0.2"

[dependencies.stm32f0xx-hal]
version = "0.15"
features = ["stm32f042", "rt"]

[dependencies.chip8]
path = "../chip8"

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "s"
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
